--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,14 @@
     <link rel="icon" href="./FlowniaLogo.png" />
     <title>Flownia</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+      ::-webkit-scrollbar {
+        display: none;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
+    <div id="notification-layer"></div>
   </body>
 </html>
