--- a/public/index.html
+++ b/public/index.html
@@ -11,11 +11,11 @@
     <link rel="icon" href="./FlowniaLogo.png" />
     <title>Flownia</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <style>
+    <!-- <style>
       ::-webkit-scrollbar {
         display: none;
       }
-    </style>
+    </style> -->
   </head>
   <body>
     <div id="root"></div>
